@@ -1,2 +1,0 @@
-prog: cds
-vgopts: -q
