@@ -1,2 +1,0 @@
-prog: cs
-vgopts: -q
