@@ -1,2 +1,0 @@
-prog: csg
-vgopts: -q
